# yolo-cmake-opencv-onnx-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  YOLODetector.h  YOLOSegmentor.h  class.names  main.cpp
.github/workflows/: ci.yml
cmake/: FindONNXRUNTIME.cmake  UseOpenCV.cmake
data/labels/: synset.txt
models/: class-seg.names
src/: YOLODetector.h  YOLOSegmentor.h  main.cpp
